Update gitignore to new dir structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,12 @@
 .Rhistory
 .RData
 .Ruserdata
-scripts/old/
-scripts/misc/
-figs/
-ms/
-misc/
-analyses/
-seqdata/
-metadata/indsel/
-metadata/*xls
+scripts/sandbox
+scripts/metadata
+manuscript/
+results/
+tmp/
+metadata/labwork
+metadata/links
+metadata/misc
+metadata/**xls
